clusters/default/infra/platform/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    traefik.ingress.kubernetes.io/router.middlewares: |
      kube-system-infra-rate-limit@kubernetescrd,
      kube-system-infra-security-headers@kubernetescrd
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kudofools
    app.kubernetes.io/managed-by: flux
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.kudofools.dev
      secretName: grafana-kudofools-dev-tls
  rules:
    - host: grafana.kudofools.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-vm-grafana
                port:
                  number: 80
